--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 #
+
+/Fish-tamagotchi
+
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 /[Ll]ibrary/
@@ -57,4 +60,3 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
-
